# executor

./: .env.example  .gitignore  pyproject.toml
executor/: log_capture.py  main.py  manager_client.py  service_manager.py  staging.py  system.py  utils.py
executor/apptainer_utils/: apptainer_config.py  apptainer_manager.py
executor/docker_utils/: docker_config.py  docker_manager.py
scripts/: run.sh  utils.sh
