[project]
name = "executor"
version = "0.1.0"
description = "PISA Scenario Queue Executor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "runner>=0.1.0",
    "pisa-api>=0.1.16",
]

[tool.uv.sources]
pisa-api = { git = "https://github.com/PISA-Hut/pisa-api.git" }
runner = { git = "https://github.com/PISA-Hut/runner.git" }
